--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "presets": [
       "@babel/env",
       "@babel/react"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime"
     ]
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
@@ -30,7 +34,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "chrome-extension-async": "^3.4.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "url-parse": "^1.5.1"
   }
 }
