--- a/app/manifest.json
+++ b/app/manifest.json
@@ -12,5 +12,5 @@
         "default_title": "Switch host",
         "default_popup": "popup.html"
     },
-    "permissions": ["tabs"]
+    "permissions": ["tabs", "storage"]
 }
