--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.0",
+    "file-loader": "^6.2.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@fontsource/titillium-web": "^4.2.2",
     "chrome-extension-async": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
