--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@fontsource/titillium-web": "^4.2.2",
     "chrome-extension-async": "^3.4.1",
+    "classnames": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "url-parse": "^1.5.1"
