--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve",
-    "build": "webpack"
+    "build-dev": "webpack",
+    "build-prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
